--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.password=thispass1423
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://20.216.145.56:3306
+server.port=80
