changed glassesschema in props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.password=thispass1423
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://20.216.145.56:3306
+spring.datasource.url=jdbc:mysql://20.216.145.56:3306/glassesschema
 server.port=80
