--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.password=thispass1423
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://20.216.145.56:3306/
 server.port=80
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
