--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://20.216.145.56:3306/glassesschema
 server.port=80
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.data.jpa.repositories.bootstrap-mode=default
