--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.password=thispass1423
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://20.216.145.56:3306/glassesschema
+spring.datasource.url=jdbc:mysql://localhost:3306/glassesschema
 server.port=80
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.data.jpa.repositories.bootstrap-mode=default
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
