--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.password=thispass1423
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://${localhost}:3306/glassesschema;DB_CLOSE_DELAY=-1.; DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:mysql://20.216.145.56:3306/glassesschema;DB_CLOSE_DELAY=-1.; DB_CLOSE_ON_EXIT=FALSE
 server.port=80
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.data.jpa.repositories.bootstrap-mode=default
